Added in service-page sections: service-main, problems, service-brands, book-service

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,6 +1,18 @@
+
 <footer class="footer">
 	<div class="container">
-		<div class="line"></div>
+		<div class="call">
+			<div class="title">Need Your Home Appliances Fixed?</div>
+		<a href="#" class="button">book a service</a>
+		<div class="call_phone">or call (619) 473- 2984</div>
+		<div class="line line_1"></div>
+		<div class="line line_2"></div>
+		<div class="line line_3"></div>
+		<div class="line line_4"></div>
+		<div class="line line_5"></div>
+		<div class="line line_6"></div>
+		<div class="line line_7"></div>
+		</div>
 		<div class="footer_wrapper">
 			<div class="footer_social">
 			<div class="logo">
@@ -14,20 +26,45 @@
 		</div>
 			<div class="footer_info">
 			<div class="footer_info_wrapper">
-				<ul class="footer_contacts">
-					<li class="footer_address">4576 Research Forest Dr Suite 200, The Woodlands, TX 77381</li>
-					<li class="footer_schedule">Mon-Sun: 8 am - 8 pm</li>
-					<li class="footer_phone">(619) 9883363</li>
-				</ul>
-				<ul class="footer_menu">
-					<li> <a href="#header">home</a></li>
-					<li> <a href="#services">appliance repair services</a></li>
-					<li> <a href="#about">About us</a> </li>
-				</ul>
-				<ul class="footer_menu">
-					<li> <a href="#areas">service areas</a></li>
-					<li> <a href="#contacts">contact us</a></li>
-				</ul>
+				<div class="footer_menu">					
+					<a class="footer_menu_name" href="#contacts">contact us</a>
+					<div class="footer_contacts">
+						<div class="footer_address">4576 Research Forest Dr Suite 200, The Woodlands, TX 77381</div>
+						<div class="footer_schedule">Mon-Sun: 8 am - 8 pm</div>
+						<div class="footer_phone">(619) 9883363</div>
+					</div>
+				</div>
+				<div class="footer_menu">
+					<a class="footer_menu_name" href="#about">About us</a>
+					<ul class="footer_menu_list"> 
+						<a class="footer_menu_name" href="#services">appliance repair services</a>
+						<li> <a href="#">Trash compactor repair service </a></li>
+						<li> <a href="#">Refrigerator repair service </a></li>
+						<li> <a href="#">Freezer repair service </a></li>
+						<li> <a href="#">Dishwasher repair service </a></li>
+						<li> <a href="#">Washing machine repair service <a></li>
+						<li> <a href="#">Dryer repair service </a></li>
+						<li> <a href="#">Wine cooler repair service </a></li>
+						<li> <a href="#">Range repair service </a></li>
+						<li> <a href="#">Oven repair service </a></li>
+						<li> <a href="#">Microwave repair service </a></li>
+					</ul>
+				</div>
+				<div class="footer_menu">
+					<a class="footer_menu_name" href="#header">home</a>
+					<ul class="footer_menu_list"> 
+						<a class="footer_menu_name" href="#areas">service areas</a>
+						<li> <a href="#">Egypt </a></li>
+						<li> <a href="#">Spring </a></li>
+						<li> <a href="#">Humble </a></li>
+						<li> <a href="#">Woodland </a></li>
+						<li> <a href="#">Conroe </a></li>
+						<li> <a href="#">New Caney </a></li>
+						<li> <a href="#">Klein </a></li>
+						<li> <a href="#">Tomball </a></li>
+						<li> <a href="#">Cypress </a></li>
+					</ul>
+				</div>
 			</div>
 			<div class="footer_authorship">
 				<div>Copyright 2023. All Rights Reserved </div>
