--- a/src/index.html
+++ b/src/index.html
@@ -369,29 +369,7 @@
 			<div class="line"></div>
 		</div>
 	</section>
-	<section class="areas" id="areas">
-		<div class="container">
-			<div class="areas_title">
-				<div class="title">AREAS WE <span>SERVE</span> </div>
-				<div class="subtitle">Service area</div>
-			</div>
-			<div class="areas_list">
-				<ol>
-					<li class="areas_city"> <span>01</span> <a href="#">Spring</a> </li>
-					<li class="areas_city"> <span>02</span> <a href="#">Woodlands</a> </li>
-					<li class="areas_city"> <span>03</span> <a href="#">Humble</a> </li>
-					<li class="areas_city"> <span>04</span> <a href="#">Kingwood</a> </li>
-					<li class="areas_city"> <span>05</span> <a href="#">Conroe</a> </li>
-					<li class="areas_city"> <span>06</span> <a href="#">New Caney</a> </li>
-					<li class="areas_city"> <span>07</span> <a href="#">Klein</a> </li>
-					<li class="areas_city"> <span>08</span> <a href="#">Tomball</a> </li>
-					<li class="areas_city"> <span>09</span> <a href="#">Cypress</a> </li>
-					<li class="areas_city"> <span>10</span> <a href="#">Egypt</a> </li>
-					<div class="line"></div>
-				</ol>
-			</div>
-		</div>
-	</section>
+	@@include('html/areas.html')
 	<section class="partners">
 		<div class="container">
 			<div class="title">Our partners</div>
@@ -400,13 +378,12 @@
 				<div class="partners_icon"><img src="@img/icons-partners/assurant.png" alt="assurant"></div>
 				<div class="partners_icon"><img src="@img/icons-partners/global.png" alt="global home protection"></div>
 				<div class="partners_icon"><img src="@img/icons-partners/home-shield.png" alt="american home shield"></div>
-				<div class="partners_icon"><img src="@img/icons-partners/first-warranty.png" alt="first american home warranty"></div>
-				<div class="partners_icon"><img src="@img/icons-partners/home-warranty.png" alt="select home warranty"></div>
+				<div class="partners_icon"><img src="@img/icons-partners/first-american.png" alt="first american home warranty"></div>
+				<div class="partners_icon"><img src="@img/icons-partners/select.png" alt="select home warranty"></div>
 				<div class="partners_icon"><img src="@img/icons-partners/choice.png" alt="choice home warranty"></div>
 			</div>
 		</div>
 	</section>
-	@@include('html/call.html')
 	@@include('html/footer.html')
 	<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 	<script src="js/app.min.js"></script>
