--- a/src/refrigerator.html
+++ b/src/refrigerator.html
@@ -1,8 +1,133 @@
 @@include('html/head.html')
 <body>
 	@@include('html/header.html')
+	<section class="service-main">
+		<div class="container">
+			<img src="@img/services-page/refrigerator.png" alt="refrigerator">
+			<div class="service-main_descr">
+				<div class="title">REFRIGERATOR <br> <span>REPAIR SERVICE</span> </div>
+				<div class="service-main_text">
+					We offer the best home appliance repair services in San Diego County. We will repair and maintain your refrigerator in top working condition to ensure your special occasions go smoothly. Contact us on (619)648-3806 or book a fridge repair service online.
+				</div>
+				<div class="service-main_form">
+					<form id="form-service" action="#">
+						<div class="service-main_form_title">Book a service</div>
+						<div class="service-main_item">
+							<input required type="text" name ="FullName" class="service-main_form_input" placeholder="full name*">
+						</div>
+						<div class="contact_form_item">
+							<input required type="text" name ="email" class="service-main_form_input" placeholder="email*">
+						</div>
+						<div class="contact_form_item">
+							<input required type="phone" name ="phone" class="service-main_form_input" placeholder="phone*">
+						</div>
+						<button class="service-main_form_button" type="submit">submit</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="problems">
+		<div class="container">
+			<div class="problems_title">
+				<div class="title"> <span>Common Refrigerator </span> <br> Problems We Fix</div>
+				<div class="problems_info">Our technicians are well trained and licensed to repair all types of refrigerator problems. Some of the most common refrigerator problems we repair include:</div>
+			</div>
+			<div class="problems_item">
+				<div class="problems_subtitle">Refrigerator runs constantly</div>
+				<img src="@img/services-page/refrig-open-door.png" alt="refrigerator">
+				<div class="problems_text">
+				<span>If your refrigerator cycles or runs constantly, it may require an expert's attention. The most common problem with a continuously running fridge is dirty condenser coils. The fridge is less efficient and consumes more power, leading to higher utility bills.</span>	
+			<span>Sometimes you may have set the fridge's temperature so low that it has to keep running to maintain the required temperature. Check that you have set the temperature correctly before calling your refrigerator repair provider.</span>
+			</div>
+			</div>
+			<div class="problems_item">
+				<div class="problems_subtitle">Refrigerator not cooling</div>
+				<div class="problems_text">
+				<span>Another common refrigerator failure is not cooling to the required temperatures. Condenser coils that do not dissipate heat adequately may cause your fridge not to cool. </span>	
+			<span>The fridge's condenser and evaporator fans may also need replacement. Contact a refrigerator repair technician to get it fixed.</span>
+			</div>
+			</div>
+			<div class="problems_item">
+				<div class="problems_subtitle">The refrigerator is leaking</div>
+				<div class="problems_text">
+				<span>Blocked drains or a clogged water supply line may cause leakage. Unblocking the drains or unclogging the supply line can fix the fridge.</span>	
 
-	@@include('html/call.html')
+			</div>
+			</div>
+			<div class="problems_item">
+				<div class="problems_subtitle">The refrigerator is too loud</div>
+				<div class="problems_text">
+				<span>If you notice that your refrigerator has become louder than usual, it indicates a problem that needs refrigerator repair.</span>	
+			<span>Most often, the worn-out evaporator or condenser fan blades need replacing. Loose refrigerator parts may also obstruct the fan blades, causing the noise.</span>
+			</div>
+			</div>
+			<div class="problems_item">
+				<div class="problems_subtitle">Ice maker is not working</div>
+				<div class="problems_text">
+				<span>You may discover that your ice maker is not producing as much ice as it used to produce before. Check to confirm that the freezer temperature is set correctly.  </span>	
+			<span>You should set it to between zero and five degrees Fahrenheit. If the temperature is set correctly and the ice maker won't work, call a refrigerator appliance repair technician to examine your fridge.</span>
+			</div>
+			</div>
+			<div class="problems_item">
+				<div class="problems_subtitle">Food freezing in the fridge</div>
+				<div class="problems_text">
+				<span>When food freezes, it indicates very low temperatures inside the fridge. A broken thermostat or a damaged control board are the leading causes of very low refrigerator temperatures.  </span>	
+			<span>Contact immediately a fridge repair company to prevent serious problems.</span>
+			</div>
+			</div>
+			<div class="problems_item">
+				<div class="problems_subtitle">Water dispenser not working</div>
+				<div class="problems_text">
+				<span>Modern fridges come with an in-built water dispenser. If your dispenser stops working, the water tube is frozen or blocked. You can try thawing the water tube and check that the freezer temperature is set correctly.</span>	
+			<span>Contact a freezer repair service provider if this does not solve the problem.</span>
+			</div>
+			</div>
+			<div class="line"></div>
+		</div>
+	</section>
+	<section class="service-brands">
+		<div class="container">
+			<div class="service-brands_header">
+				<div class="service-brands_title">
+					<div class="title"> Refrigerator brands <br> <span>we repair</span> </div>
+					<div class="subtitle">And many others</div>
+				</div>
+				<div class="service-brands_info">Our technicians are well trained and licensed to repair all types of refrigerator problems. Some of the most common refrigerator problems we repair include:</div>
+				</div>
+				<div class="line"></div>
+				<div class="service-brands_items">
+					<div class="service-brands_item"><img src="svgicons/brands/logo_7_lg.svg" alt="lg"></div>
+					<div class="service-brands_item"><img src="svgicons/brands/logo_13_samsung.svg" alt="samsung"></div>
+					<div class="service-brands_item"><img src="svgicons/brands/logo_17_whirpool.svg" alt="whirlpool"></div>
+					<div class="service-brands_item"><img src="svgicons/brands/logo_15_amana.svg" alt="amana"></div>
+					<div class="service-brands_item"><img src="svgicons/brands/logo_24_kitchenaid.svg" alt="kitchenaid"></div>
+					<div class="service-brands_item"><img src="svgicons/brands/logo_9_fisher.svg" alt="fisher&paykel"></div>
+					<div class="service-brands_item"><img src="svgicons/brands/logo_1_maytag.svg" alt="maytag"></div>
+					<div class="service-brands_item"><img src="svgicons/brands/logo_2_energy.svg" alt="general-electrics"></div>
+					<div class="service-brands_item"><img src="svgicons/brands/logo_4_kenmore.svg" alt="kenmore"></div>
+				</div>
+			</div>
+		</div>
+
+	</section>
+	@@include('html/areas.html')
+	<section class="book-service">
+		<div class="container">
+			<div class="title book-service_title">Trust the refrigerator repair 
+				experts</div>
+			<div class="book-service_wrapper">
+				<div class="book-service_subscr">
+					Refrigerator repair is one of the many unexpected household expenses you may face. Not all refrigerator problems have an easy DIY fix, and sometimes you could do more damage than well by trying to fix your fridge. 
+				</div>
+				<div class="book-service_text">
+					<span>Contact us on (619) 648-3806 to get refrigerator repair service in your area or book our fridge repair service online.</span>
+					<span>Being prepared helps cushion you from the hassle of finding a reliable technician and covering the fridge repair costs. Our refrigerator repair technicians can correctly diagnose and fix all your refrigerator problems. </span>
+				</div>
+				<div class="button book-service_button">book a service</div>
+			</div>
+		</div>
+	</section>
 	@@include('html/footer.html')
 	<script src="js/app.min.js"></script>
 </body>
