Created page for areas, book-a-service; fixed bugs

--- a/src/html/areas.html
+++ b/src/html/areas.html
@@ -6,7 +6,7 @@
 		</div>
 		<div class="areas_list">
 			<ol>
-				<li class="areas_city"> <span>01</span> <a href="#">Spring</a> </li>
+				<li class="areas_city"> <span>01</span> <a href="spring.html">Spring</a> </li>
 				<li class="areas_city"> <span>02</span> <a href="#">Woodlands</a> </li>
 				<li class="areas_city"> <span>03</span> <a href="#">Humble</a> </li>
 				<li class="areas_city"> <span>04</span> <a href="#">Kingwood</a> </li>
