--- a/src/refrigerator.html
+++ b/src/refrigerator.html
@@ -9,19 +9,19 @@
 				<div class="service-main_text">
 					We offer the best home appliance repair services in San Diego County. We will repair and maintain your refrigerator in top working condition to ensure your special occasions go smoothly. Contact us on (619)648-3806 or book a fridge repair service online.
 				</div>
-				<div class="service-main_form">
+				<div class="form">
 					<form id="form-service" action="#">
-						<div class="service-main_form_title">Book a service</div>
-						<div class="service-main_item">
-							<input required type="text" name ="FullName" class="service-main_form_input" placeholder="full name*">
+						<div class="form_title">Book a service</div>
+						<div class="form_item">
+							<input required type="text" name ="FullName" class="form_input" placeholder="full name*">
 						</div>
-						<div class="contact_form_item">
-							<input required type="text" name ="email" class="service-main_form_input" placeholder="email*">
+						<div class="form_item">
+							<input required type="text" name ="email" class="form_input" placeholder="email*">
 						</div>
-						<div class="contact_form_item">
-							<input required type="phone" name ="phone" class="service-main_form_input" placeholder="phone*">
+						<div class="form_item">
+							<input required type="phone" name ="phone" class="form_input" placeholder="phone*">
 						</div>
-						<button class="service-main_form_button" type="submit">submit</button>
+						<button class="button" type="submit">submit</button>
 					</form>
 				</div>
 			</div>
@@ -93,7 +93,7 @@
 					<div class="title"> Refrigerator brands <br> <span>we repair</span> </div>
 					<div class="subtitle">And many others</div>
 				</div>
-				<div class="service-brands_info">Our technicians are well trained and licensed to repair all types of refrigerator problems. Some of the most common refrigerator problems we repair include:</div>
+				<div class="service-brands_info">Our licensed technicians have experience repairing the most common refrigerator brands. We diagnose and fix all brands of refrigerators, including;</div>
 				</div>
 				<div class="line"></div>
 				<div class="service-brands_items">
@@ -117,18 +117,82 @@
 			<div class="title book-service_title">Trust the refrigerator repair 
 				experts</div>
 			<div class="book-service_wrapper">
-				<div class="book-service_subscr">
+				<div class="book-service_descr">
 					Refrigerator repair is one of the many unexpected household expenses you may face. Not all refrigerator problems have an easy DIY fix, and sometimes you could do more damage than well by trying to fix your fridge. 
 				</div>
 				<div class="book-service_text">
 					<span>Contact us on (619) 648-3806 to get refrigerator repair service in your area or book our fridge repair service online.</span>
 					<span>Being prepared helps cushion you from the hassle of finding a reliable technician and covering the fridge repair costs. Our refrigerator repair technicians can correctly diagnose and fix all your refrigerator problems. </span>
 				</div>
-				<div class="button book-service_button">book a service</div>
+				<a href="book-a-service.html" class="button book-service_button">book a service</a>
 			</div>
 		</div>
 	</section>
+	<section class="questions">
+		<div class="container">
+			<div class="title">Frequently Asked <br> <span>Questions</span> </div>
+			<div class="line"></div>
+			<div class="questions_items">
+				<div class="questions_item">
+					<div class="questions_item_subtitle">
+						<div class="questions_item_number">[01]</div>
+						<div class="questions_item_name">What does refrigerator repair service include?
+							<div class="questions_item_descr">
+								Our fridge repair services include diagnosing your appliance to establish the problem, followed by the corresponding repairs and necessary part replacement. You will also enjoy free appliance maintenance advice from our technicians.
+							</div>
+						</div>
+						<div class="questions_item_plus"></div> 
+					</div>
+				</div>
+				<div class="questions_item">
+					<div class="questions_item_subtitle">
+						<div class="questions_item_number">[02]</div>
+						<div class="questions_item_name"> How much does it cost to repair a refrigerator? 
+							<div class="questions_item_descr">The average cost of repairing a refrigerator is $ 250, but repair costs may differ depending on your refrigerator’s problem. A small problem like replacing a drip pan may cost you around $50, while replacing a compressor will set you back several hundred dollars.
+							</div>
+						</div>
+						<div class="questions_item_plus"></div> 
+					</div>
+				</div>
+				<div class="questions_item">
+					<div class="questions_item_subtitle">
+						<div class="questions_item_number">[03]</div>
+						<div class="questions_item_name">What causes some fridge repairs to be expensive?
+							<div class="questions_item_descr">
+								There is a simple way to tell if it is worth repairing your broken fridge. If it is less than ten years old and the repair cost is less than half the cost of a new fridge, it may be cheaper to repair. It is worth repairing a fridge that is less than five years old because it still has more years of service.Repairing an old fridge may not be worth it because older appliances tend to break down more frequently, leading to higher maintenance costs. It is better to buy a newer model with the latest refrigeration technology and better energy efficiency.
+							</div>
+						</div>
+						<div class="questions_item_plus"></div> 
+					</div>
+				</div>
+				<div class="questions_item">
+					<div class="questions_item_subtitle">
+						<div class="questions_item_number">[04]</div>
+						<div class="questions_item_name">Is it worth having a refrigerator repaired?
+							<div class="questions_item_descr">
+								There is a simple way to tell if it is worth repairing your broken fridge. If it is less than ten years old and the repair cost is less than half the cost of a new fridge, it may be cheaper to repair. It is worth repairing a fridge that is less than five years old because it still has more years of service.Repairing an old fridge may not be worth it because older appliances tend to break down more frequently, leading to higher maintenance costs. It is better to buy a newer model with the latest refrigeration technology and better energy efficiency.
+							</div>
+						</div>
+						<div class="questions_item_plus"></div> 
+					</div>
+				</div>
+				<div class="questions_item">
+					<div class="questions_item_subtitle">
+						<div class="questions_item_number">[05]</div>
+						<div class="questions_item_name">How long do fridge repairs take?
+							<div class="questions_item_descr">
+								On average, it takes two to four hours to repair a fridge depending on the problem. Some problems are fixable in under an hour.Refrigerator repair is one of the many unexpected household expenses you may face. Being prepared helps cushion you from the hassle of finding a reliable technician and covering the repair costs. Contact YOTA appliance repair serve today to schedule home appliance services.
+							</div>
+						</div>
+						<div class="questions_item_plus"></div> 
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>	
+	@@include('html/call.html')
 	@@include('html/footer.html')
+	<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 	<script src="js/app.min.js"></script>
 </body>
 </html>
