Added media for 1460 px; fix bags

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -11,7 +11,7 @@
 				<a href="#"><img src="../svgicons/fb.svg" alt="facebook"></a> 
 				<a href="#"><img src="../svgicons/inst.svg" alt="instagram"></a> 
 			</div>
-		</div>
+			</div>
 			<div class="footer_info">
 			<div class="footer_info_wrapper">
 				<div class="footer_menu">					
@@ -54,11 +54,12 @@
 					</ul>
 				</div>
 			</div>
-			<div class="footer_authorship">
-				<div>Copyright 2023. All Rights Reserved </div>
-				<div class="footer_authorship_name">site by Natalia Shkodina </div>
 			</div>
 		</div>
+		<div class="line"></div>
+		<div class="footer_authorship">
+			<div>Copyright 2023. All Rights Reserved </div>
+			<div class="footer_authorship_name">site by Natalia Shkodina </div>
 		</div>
 	</div>
 </footer>
