--- a/src/refrigerator.html
+++ b/src/refrigerator.html
@@ -5,9 +5,11 @@
 		<div class="container">
 			<img src="@img/services-page/refrigerator.png" alt="refrigerator">
 			<div class="service-main_descr">
-				<div class="title">REFRIGERATOR <br> <span>REPAIR SERVICE</span> </div>
-				<div class="service-main_text">
-					We offer the best home appliance repair services in San Diego County. We will repair and maintain your refrigerator in top working condition to ensure your special occasions go smoothly. Contact us on (619)648-3806 or book a fridge repair service online.
+				<div class="service-main_title">
+					<div class="title">REFRIGERATOR <br> <span>REPAIR SERVICE</span> </div>
+					<div class="service-main_text">
+						We offer the best home appliance repair services in San Diego County. We will repair and maintain your refrigerator in top working condition to ensure your special occasions go smoothly. Contact us on (619)648-3806 or book a fridge repair service online.
+					</div>
 				</div>
 				<div class="form">
 					<form id="form-service" action="#">
@@ -34,8 +36,11 @@
 				<div class="problems_info">Our technicians are well trained and licensed to repair all types of refrigerator problems. Some of the most common refrigerator problems we repair include:</div>
 			</div>
 			<div class="problems_item">
-				<div class="problems_subtitle">Refrigerator runs constantly</div>
-				<img src="@img/services-page/refrig-open-door.png" alt="refrigerator">
+				<div class="problems_subtitle">
+					Refrigerator runs constantly
+					<img src="@img/services-page/refrig-open-door.png" alt="refrigerator">
+				</div>
+
 				<div class="problems_text">
 				<span>If your refrigerator cycles or runs constantly, it may require an expert's attention. The most common problem with a continuously running fridge is dirty condenser coils. The fridge is less efficient and consumes more power, leading to higher utility bills.</span>	
 			<span>Sometimes you may have set the fridge's temperature so low that it has to keep running to maintain the required temperature. Check that you have set the temperature correctly before calling your refrigerator repair provider.</span>
