Converted to grid-system section services, added mixins

--- a/src/html/areas.html
+++ b/src/html/areas.html
@@ -7,15 +7,15 @@
 		<div class="areas_list">
 			<ol>
 				<li class="areas_city"> <span>01</span> <a href="spring.html">Spring</a> </li>
-				<li class="areas_city"> <span>02</span> <a href="#">Woodlands</a> </li>
-				<li class="areas_city"> <span>03</span> <a href="#">Humble</a> </li>
-				<li class="areas_city"> <span>04</span> <a href="#">Kingwood</a> </li>
-				<li class="areas_city"> <span>05</span> <a href="#">Conroe</a> </li>
-				<li class="areas_city"> <span>06</span> <a href="#">New Caney</a> </li>
-				<li class="areas_city"> <span>07</span> <a href="#">Klein</a> </li>
-				<li class="areas_city"> <span>08</span> <a href="#">Tomball</a> </li>
-				<li class="areas_city"> <span>09</span> <a href="#">Cypress</a> </li>
-				<li class="areas_city"> <span>10</span> <a href="#">Egypt</a> </li>
+				<li class="areas_city"> <span>02</span> <a href="spring.html">Woodlands</a> </li>
+				<li class="areas_city"> <span>03</span> <a href="spring.html">Humble</a> </li>
+				<li class="areas_city"> <span>04</span> <a href="spring.html">Kingwood</a> </li>
+				<li class="areas_city"> <span>05</span> <a href="spring.html">Conroe</a> </li>
+				<li class="areas_city"> <span>06</span> <a href="spring.html">New Caney</a> </li>
+				<li class="areas_city"> <span>07</span> <a href="spring.html">Klein</a> </li>
+				<li class="areas_city"> <span>08</span> <a href="spring.html">Tomball</a> </li>
+				<li class="areas_city"> <span>09</span> <a href="spring.html">Cypress</a> </li>
+				<li class="areas_city"> <span>10</span> <a href="spring.html">Egypt</a> </li>
 				<div class="line"></div>
 			</ol>
 		</div>
