--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -4,7 +4,7 @@
 		<div class="footer_wrapper">
 			<div class="footer_social">
 			<div class="logo">
-				<a href="#https://yoto.com#" class="logo_link"><img src="/svgicons/logo.svg" alt="logo"></a>
+				<a href="https://www.yota.annakondr.su" class="logo_link"><img src="/svgicons/logo.svg" alt="logo"></a>
 			</div>
 			<a href="#" class="mail_link">info_yota@gmail.com</a>
 			<div class="footer_social_icons">
@@ -23,9 +23,9 @@
 					</div>
 				</div>
 				<div class="footer_menu">
-					<a class="footer_menu_name" href="#about">About us</a>
+					<a class="footer_menu_name" href="https://www.yota.annakondr.su/#about">About us</a>
 					<ul class="footer_menu_list"> 
-						<a class="footer_menu_name" href="#services">appliance repair services</a>
+						<a class="footer_menu_name" href="https://www.yota.annakondr.su/#services">appliance repair services</a>
 						<li> <a href="#">Trash compactor repair service </a></li>
 						<li> <a href="#">Refrigerator repair service </a></li>
 						<li> <a href="#">Freezer repair service </a></li>
@@ -39,18 +39,18 @@
 					</ul>
 				</div>
 				<div class="footer_menu">
-					<a class="footer_menu_name" href="#header">home</a>
+					<a class="footer_menu_name" href="https://www.yota.annakondr.su/#header">home</a>
 					<ul class="footer_menu_list"> 
-						<a class="footer_menu_name" href="#areas">service areas</a>
-						<li> <a href="#">Egypt </a></li>
-						<li> <a href="#">Spring </a></li>
-						<li> <a href="#">Humble </a></li>
-						<li> <a href="#">Woodland </a></li>
-						<li> <a href="#">Conroe </a></li>
-						<li> <a href="#">New Caney </a></li>
-						<li> <a href="#">Klein </a></li>
-						<li> <a href="#">Tomball </a></li>
-						<li> <a href="#">Cypress </a></li>
+						<a class="footer_menu_name" href="https://www.yota.annakondr.su/#areas">service areas</a>
+						<li> <a href="https://www.yota.annakondr.su/spring">Egypt </a></li>
+						<li> <a href="https://www.yota.annakondr.su/spring">Spring </a></li>
+						<li> <a href="https://www.yota.annakondr.su/spring">Humble </a></li>
+						<li> <a href="https://www.yota.annakondr.su/spring">Woodland </a></li>
+						<li> <a href="https://www.yota.annakondr.su/spring">Conroe </a></li>
+						<li> <a href="https://www.yota.annakondr.su/spring">New Caney </a></li>
+						<li> <a href="https://www.yota.annakondr.su/spring">Klein </a></li>
+						<li> <a href="https://www.yota.annakondr.su/spring">Tomball </a></li>
+						<li> <a href="https://www.yota.annakondr.su/spring">Cypress </a></li>
 					</ul>
 				</div>
 			</div>
