--- a/src/html/call.html
+++ b/src/html/call.html
@@ -1,13 +1,15 @@
 
 <section class="call">
-	<div class="title">Need Your Home Appliances Fixed?</div>
-<a href="book-a-service.html" class="button">book a service</a>
-<div class="call_phone">or call (619) 473- 2984</div>
-<div class="line line_1"></div>
-<div class="line line_2"></div>
-<div class="line line_3"></div>
-<div class="line line_4"></div>
-<div class="line line_5"></div>
-<div class="line line_6"></div>
-<div class="line line_7"></div>
+	<div class="container">
+		<div class="title">Need Your Home Appliances Fixed?</div>
+		<a href="book-a-service.html" class="button">book a service</a>
+		<div class="call_phone">or call (619) 473- 2984</div>
+		<div class="line line_1"></div>
+		<div class="line line_2"></div>
+		<div class="line line_3"></div>
+		<div class="line line_4"></div>
+		<div class="line line_5"></div>
+		<div class="line line_6"></div>
+		<div class="line line_7"></div>
+	</div>
 </section>
