--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,15 +1,15 @@
 <header class="header" id="header">
 	<div class="container">
 		<div class="logo">
-			<a href="#https://yoto.com#" class="logo_link"><img src="/svgicons/logo.svg" alt="logo"></a>
+			<a href="https://www.yota.annakondr.su" class="logo_link"><img src="/svgicons/logo.svg" alt="logo"></a>
 		</div>
 		<div class="header_menu">
 			<ul class="menu">
-				<li class="menu_item"><a href="#header" class="menu_link">home</a></li>
-				<li class="menu_item"><a href="#services" class="menu_link">appliance repair services</a></li>
-				<li class="menu_item"><a href="#about" class="menu_link">about us</a></li>
-				<li class="menu_item"><a href="#areas" class="menu_link">service areas</a></li>
-				<li class="menu_item"><a href="#contacts" class="menu_link">contact us</a></li>
+				<li class="menu_item"><a href="https://www.yota.annakondr.su/#header" class="menu_link">home</a></li>
+				<li class="menu_item"><a href="https://www.yota.annakondr.su/#services" class="menu_link">appliance repair services</a></li>
+				<li class="menu_item"><a href="https://www.yota.annakondr.su/#about" class="menu_link">about us</a></li>
+				<li class="menu_item"><a href="https://www.yota.annakondr.su/#areas" class="menu_link">service areas</a></li>
+				<li class="menu_item"><a href="https://www.yota.annakondr.su/#contacts" class="menu_link">contact us</a></li>
 			</ul>
 			<div class="header_contacts">
 				<img src="/svgicons/telephone.svg" alt="telephone">
