Fixed bugs in service's items, added grid in page-service-main-section

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -19,7 +19,7 @@
 					<div class="footer_contacts">
 						<div class="footer_address">4576 Research Forest Dr Suite 200, The Woodlands, TX 77381</div>
 						<div class="footer_schedule">Mon-Sun: 8 am - 8 pm</div>
-						<div class="footer_phone">(619) 9883363</div>
+						<div class="footer_phone">(619) 988-3363</div>
 					</div>
 				</div>
 				<div class="footer_menu">
