Created hamburger-menu; added media for herder and promo

--- a/src/html/call.html
+++ b/src/html/call.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<div class="title">Need Your Home Appliances Fixed?</div>
 		<a href="book-a-service.html" class="button">book a service</a>
-		<div class="call_phone">or call (619) 473- 2984</div>
+		<div class="call_phone">or call (619) 988-3363</div>
 		<div class="line line_1"></div>
 		<div class="line line_2"></div>
 		<div class="line line_3"></div>
