--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,21 +1,75 @@
 <header class="header" id="header">
 	<div class="container">
+		<div class="hamburger">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
+		<div class="menu">
+			<div class="menu_top">
+				<a href="https://www.yota.annakondr.su" class="menu_logo"><img src="/svgicons/logo-white.svg" alt="logo-white"></a>
+				<div class="menu_close"><div></div></div>
+			</div>
+			<div class="menu_line"></div>
+			<div class="menu_item"><a href="https://www.yota.annakondr.su/#header" class="menu_link">home</a></div>
+			<div class="menu_line"></div>
+			<div class="menu_item_plus">
+				<div class="menu_item_name">
+					<a href="https://www.yota.annakondr.su/#services" class="menu_link">appliance repair services</a>
+					<img class="menu_item_img" src="/svgicons/arrow-down.svg" alt="arrow-down">
+				</div>
+				<ul class="menu_item_list menu_item_list_none">
+					<li>Refrigerator repair service</li>
+					<li>Freezer repair service</li>
+					<li>Dishwasher repair service</li>
+					<li>Wine cooler repair service</li>
+					<li>Oven repair service</li>
+					<li>Trash compactor repair service</li>
+					<li>Microwave repair service</li>
+					<li>Dryer repair service</li>
+					<li>Washing machine repair service</li>
+					<li>Range repair service</li>
+				</ul>
+			</div>
+			<div class="menu_line"></div>
+			<div class="menu_item"><a href="https://www.yota.annakondr.su/#about" class="menu_link">about us</a></div>
+			<div class="menu_line"></div>
+			<div class="menu_item_plus">
+				<div class="menu_item_name">
+					<a href="https://www.yota.annakondr.su/#areas" class="menu_link">service areas</a>						
+					<img class="menu_item_img" src="/svgicons/arrow-down.svg" alt="arrow-down">
+				</div>
+					<ul class="menu_item_list menu_item_list_none">
+						<li>Spring</li>
+						<li>Woodlands</li>
+						<li>Humble</li>
+						<li>Kingwood</li>
+						<li>Conroe</li>
+						<li>New Caney</li>
+						<li>Klein</li>
+						<li>Tomball</li>
+						<li>Cypress</li>
+						<li>Egypt</li>
+					</ul>
+			</div>			
+			<div class="menu_line"></div>
+			<div class="menu_item"><a href="https://www.yota.annakondr.su/#contacts" class="menu_link">contact us</a></div>
+		</div>
 		<div class="logo">
 			<a href="https://www.yota.annakondr.su" class="logo_link"><img src="/svgicons/logo.svg" alt="logo"></a>
 		</div>
 		<div class="header_menu">
-			<ul class="menu">
-				<li class="menu_item"><a href="https://www.yota.annakondr.su/#header" class="menu_link">home</a></li>
-				<li class="menu_item"><a href="https://www.yota.annakondr.su/#services" class="menu_link">appliance repair services</a></li>
-				<li class="menu_item"><a href="https://www.yota.annakondr.su/#about" class="menu_link">about us</a></li>
-				<li class="menu_item"><a href="https://www.yota.annakondr.su/#areas" class="menu_link">service areas</a></li>
-				<li class="menu_item"><a href="https://www.yota.annakondr.su/#contacts" class="menu_link">contact us</a></li>
-			</ul>
+				<a href="https://www.yota.annakondr.su/#header" class="menu_link header_menu_link">home</a>
+				<a href="http://www.yota.annakondr.su/#services" class="menu_link header_menu_link">appliance repair services</a>
+				<a href="https://www.yota.annakondr.su/#about" class="menu_link header_menu_link">about us</a>
+				<a href="https://www.yota.annakondr.su/#areas" class="menu_link header_menu_link">service areas</a>									
+				<a href="https://www.yota.annakondr.su/#contacts" class="menu_link header_menu_link">contact us</a>
 			<div class="header_contacts">
 				<img src="/svgicons/telephone.svg" alt="telephone">
 				<a href="tel:+16199883363" class="header_phone">(619) 988-3363</a>
 			</div>
 		</div>
+		</div>
 	</div>
-	<div class="header_line"></div>
+	<div class="header_line line"></div>
 </header>
